--- a/spring5-recipe-app/src/main/resources/templates/index.html
+++ b/spring5-recipe-app/src/main/resources/templates/index.html
@@ -6,11 +6,16 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" 
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"
+		th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}">
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-	 	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	 	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"
+	 	th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+	 	
+	<!-- Jquery -->
+	<script src="/webjars/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
 	<div class="container-fluid" style="margin-top: 20px">
@@ -27,11 +32,15 @@
 							 		<tr>
 										<th>ID</th>
 										<th>Description</th>
+										<th>View</th>
 									</tr>
 							 	</thead>
 							 	<tr th:each="recipe : ${recipes}">
 							 		<td th:text="${recipe.id}">1234</td>
 									<td th:text="${recipe.description}">Tasty meal 3</td>
+									<td>
+										<a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a>
+									</td>
 							 	</tr>
 							 </table>
 						</div>
