--- a/spring5-recipe-app/src/main/resources/templates/index.html
+++ b/spring5-recipe-app/src/main/resources/templates/index.html
@@ -33,13 +33,17 @@
 										<th>ID</th>
 										<th>Description</th>
 										<th>View</th>
+										<th>Update</th>
 									</tr>
 							 	</thead>
 							 	<tr th:each="recipe : ${recipes}">
 							 		<td th:text="${recipe.id}">1234</td>
 									<td th:text="${recipe.description}">Tasty meal 3</td>
 									<td>
-										<a href="#" th:href="@{'/recipe/show/'+${recipe.id}}">View</a>
+										<a href="#" th:href="@{'/recipe/'+${recipe.id}+'/show'}">View</a>
+									</td>
+									<td>
+										<a href="#" th:href="@{'/recipe/'+${recipe.id}+'/update'}">update</a>
 									</td>
 							 	</tr>
 							 </table>
