CRUD ingredients & displaying pictures
Pictures are stored in db as byte array

--- a/spring5-recipe-app/src/main/resources/templates/recipe/recipeform.html
+++ b/spring5-recipe-app/src/main/resources/templates/recipe/recipeform.html
@@ -21,7 +21,7 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <form  th:object="${recipe}" th:action="@{/recipe}">
+            <form  th:object="${recipe}" th:action="@{/recipe}" method="post">
                 <input type="hidden" th:field="*{id}"/>
                 <input type="hidden" th:field="*{notes.id}"/>
                 <div class="pannel-group">
@@ -66,10 +66,11 @@
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Difficulty:</label>
-                                    <select class="form-control">
-                                        <option>Easy</option>
-                                        <option>Medium</option>
-                                        <option>Hard</option>
+                                    <select class="form-control" th:field="*{difficulty}">
+                                        <option th:each="difficultyValue : ${T(hawk.springframweork.spring5recipeapp.domain.Difficulty).values()}"
+                                        		th:value="${difficultyValue.name()}"
+                                        		th:text="${difficultyValue.name()}"
+                                        >Easy</option>
                                     </select>
                                 </div>
                             </div>
